--- a/NetflixClone_DIO/index.html
+++ b/NetflixClone_DIO/index.html
@@ -91,6 +91,7 @@
     <script src="js/owl/jquery.min.js"></script>
     <script src="js/owl/owl.carousel.min.js"></script>
     <script src="js/owl/setup.js"></script>
+    <script src="js/index.js"></script>
 
 </body>
 </html>
